blog: fix unwanted horizontal scroll for the whole post
By opting in for the same in just code blocks.

--- a/blog/xhtml11.css
+++ b/blog/xhtml11.css
@@ -169,6 +169,8 @@ div.listingblock > div.content {
   border-left: 5px solid #f0f0f0;
   background: #f8f8f8;
   padding: 0.5em;
+  /* Long lines: use horizontal scrollbar. */
+  overflow: auto;
 }
 
 div.quoteblock, div.verseblock {
